tests/anp_test_7_swapping_rules/anp.yaml
# policy reference:
# https://github.com/kundan2707/network-policy-api/blob/master/conformance/base/admin_network_policy/core-ingress-tcp-rules.yaml
# swapped some rules
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-tcp-with-swapped-rules
spec:
  priority: 3
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  ingress:
  - name: "pass-from-ravenclaw-everything" # swapped with allow-from-ravenclaw-everything , will not affect on the results since default is allow all
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-slytherin-at-port-80" # swapped with deny-from-slytherin-at-port-80, all conns will be allowed
    action: "Pass"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
  - name: "deny-from-slytherin-at-port-80"
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
  - name: "deny-from-hufflepuff-everything-else" # swapped with allow-from-hufflepuff-at-port-80, all conns will be denied
    action: "Deny"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff  
  - name: "allow-from-hufflepuff-at-port-80"
    action: "Allow"
    from:
    - namespaces:
        matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 80
